--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="greetings">
         <span>H</span>
         <span>I</span>
+        <span>-</span>
         <span>A</span>
         <span>S</span>
         <span>H</span>
