--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <div class="greetings">
         <span>H</span>
         <span>I</span>
-        <span>-</span>
+        <span>‎ </span>
+        <span>‎ </span>
         <span>A</span>
         <span>S</span>
         <span>H</span>
